Inzynierka/force-app/main/default/objects/Meal_Type__c/Meal_Type__c.object-meta.xml
<CustomObject>
    <label>Meal Type</label>
    <nameField>
        <label>MealType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MealTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>