Inzynierka/force-app/main/default/objects/Meal_Type__c/fields/Descriptor__c.field-meta.xml
<CustomField>
    <fullName>Descriptor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Descriptor</label>
    <referenceTo>Descriptor__c</referenceTo>
    <relationshipLabel>MealTypes</relationshipLabel>
    <relationshipName>MealTypes</relationshipName>
    <type>Lookup</type>
</CustomField>