Inzynierka/force-app/main/default/objects/Meal_Type__c/fields/Total_calories__c.field-meta.xml
<CustomField>
    <fullName>Total_calories__c</fullName>
    <label>Total calories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>